# monteplan

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish.yml
app/: Home.py
app/components/: charts.py  forms.py  theme.py
app/pages/: 1_Plan_Setup.py  2_Portfolio.py  3_Run_Results.py  4_Policies.py  5_Compare_Scenarios.py  6_Sensitivity.py
docs/: changelog.md  contributing.md  index.md
docs/api/: analytics.md  config.md  engine.md  io.md  returns.md  spending.md  taxes.md
docs/case-studies/: coast-fire.md  conservative-retiree.md  fire.md  guardrails-vs-constant.md  index.md
docs/getting-started/: first-simulation.md  installation.md  (+1 more)
notebooks/: 01_getting_started.ipynb  02_spending_policies.ipynb  03_advanced_analysis.ipynb  04_case_study_fire.ipynb  05_case_study_retiree.ipynb
paper/: Makefile  monteplan.bib  monteplan.tex
scripts/: generate_readme_charts.py
tests/: conftest.py  test_antithetic.py  test_bootstrap.py  test_charts.py  test_cli.py  test_engine.py  test_events.py  test_exports.py  test_fees.py  test_floor_ceiling.py  test_glide_path.py  test_global_assets.py  test_guaranteed_income.py  test_guardrails.py  test_inflation.py  test_metrics.py  test_mvn.py  test_niit.py  test_rebalancing.py  test_regime_switching.py  test_rmd.py  test_roth_conversion.py  test_sensitivity.py  test_serialize.py  test_spending.py  test_state.py  test_state_tax.py  test_stress.py  test_swr.py  test_tax_brackets.py  test_threshold_rebalancing.py  test_timeline.py  test_vpw.py  test_withdrawals.py
(+50 files in other folders)
