[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monteplan"
version = "0.3.0"
description = "Monte Carlo financial planning simulator"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Engineer Investor", email = "egr.investor@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.5",
    "click>=8.0",
    "scipy>=1.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.90",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.scripts]
monteplan = "monteplan.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/monteplan"]

[tool.ruff]
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/**/*.py" = ["E402"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--benchmark-disable"
